Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/OverrideChecks/T4721069.out
T4721069.java:11:11: compiler.err.override.meth: (compiler.misc.cant.override: getClass(), I, getClass(), java.lang.Object), final
1 error
